Temp commit for new simulate invest action (I220).